# attestloop

./: .gitignore  CHANGELOG.md  CONTEXT.md  DECISIONS.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: deploy-site.yml
docs/adr/: ADR-0001-pydantic-strict-models.md  ADR-0002-dynamic-import-registry.md  ADR-0003-configs-as-python-packages.md  ADR-0004-prompts-as-markdown-files.md  ADR-0005-anthropic-tool-use-for-structured-output.md  ADR-0006-mapper-one-call-per-obligation.md  ADR-0007-extractor-50k-char-truncation.md  ADR-0008-fetch-200-char-threshold.md  ADR-0009-pdf-detection-magic-bytes-first.md  ADR-0010-pypdf-over-alternatives.md  ADR-0011-python-dotenv-for-env-loading.md  ADR-0012-model-selection-per-agent.md  ADR-0013-controls-embedded-in-python.md  ADR-0014-llm-timeout-and-single-retry.md  ADR-0015-flat-run-log-directory.md  README.md
docs/example_run/: classifier.json  extractor.json  mapper.json  mappings.json  obligations.json  publication.json  report.md  run_metadata.json
docs/example_runs/: README.md
docs/orchestration/: v6_pipeline.mmd
scripts/: render_graph.py  smoke_clarifier.py
site/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  wrangler.toml
site/public/: _redirects  robots.txt
site/scripts/: build-og-image.mjs  generate-og.ts
site/src/: content.config.ts
src/attestloop/: __main__.py  config.py  fetch.py  llm.py  orchestration.py  pipeline.py  registry.py  report.py  (+2 more)
tests/: test_config.py  test_mapper.py  test_orchestration.py  test_report.py  test_schemas.py
(+102 files in other folders)
